--- a/index.html
+++ b/index.html
@@ -3,41 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>Hena | Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #fdfdfd;
       color: #333;
     }
-    header {
-      background-color: #222;
-      color: #fff;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 48px;
-    }
+
     section {
-      padding: 40px 20px;
-      max-width: 800px;
+      padding: 80px 20px;
+      max-width: 900px;
       margin: auto;
     }
+
     h2 {
       border-bottom: 2px solid #ccc;
-      padding-bottom: 10px;
+      padding-bottom: 8px;
+      margin-bottom: 20px;
+    }
+
+    header {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 100px 20px;
+    }
+
+    header h1 {
+      font-size: 48px;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 18px;
+      margin-top: 0;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Your Name</h1>
-    <p>Management Information Systems Student at SJSU</p>
+    <h1>Hena</h1>
+    <p>Management Information Systems Student @ SJSU</p>
   </header>
 
   <section id="about">
@@ -45,6 +55,29 @@
     <p>
       Hello! 👋<br>
       I'm a Management Information Systems student at San Jose State University. I’m interested in roles that combine marketing, analytics, and operations to create smarter, more efficient business systems. I'm eager to learn, grow, and contribute wherever business and technology meet. Feel free to connect with me! 💫
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <p>[List your skills here — Python, SQL, Excel, etc.]</p>
+  </section>
+
+  <section id="certifications">
+    <h2>Certifications</h2>
+    <p>[Add your certifications here — Salesforce, Coursera, etc.]</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>[Add project summaries or links here]</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>
+      <strong>Email:</strong> your.email@example.com<br>
+      <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-link/" target="_blank">your-link</a>
     </p>
   </section>
 
