--- a/index.html
+++ b/index.html
@@ -4,80 +4,142 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hena | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background-color: #fdfdfd;
-      color: #333;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #ffffff;
+      color: #111;
+    }
+
+    header {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 0 20px;
+    }
+
+    header h1 {
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      max-width: 600px;
+      line-height: 1.5;
+    }
+
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #fff;
+      border-bottom: 1px solid #eee;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      font-size: 0.95rem;
+      z-index: 999;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #111;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #6c63ff;
     }
 
     section {
-      padding: 80px 20px;
+      padding: 100px 20px;
       max-width: 900px;
       margin: auto;
     }
 
     h2 {
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 8px;
+      font-size: 1.8rem;
       margin-bottom: 20px;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 8px;
     }
 
-    header {
-      background-color: #222;
-      color: white;
-      text-align: center;
-      padding: 100px 20px;
+    .hero-img {
+      margin-top: 30px;
+      width: 160px;
+      height: 160px;
+      border-radius: 100%;
+      background-color: #ddd;
+      display: inline-block;
     }
 
-    header h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
-    }
-
-    header p {
-      font-size: 18px;
-      margin-top: 0;
+    /* TEMP: placeholder image effect */
+    .hero-img::after {
+      content: 'Your Photo';
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      font-size: 0.9rem;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#skills">Skills</a>
+    <a href="#certifications">Certifications</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
   <header>
-    <h1>Hena</h1>
-    <p>Management Information Systems Student @ SJSU</p>
+    <div class="hero-img"></div>
+    <h1>Hello, I’m Hena</h1>
+    <p>I’m a Business Administration student specializing in MIS at San Jose State University, passionate about technology, data, and process optimization. I'm eager to learn, grow, and contribute wherever business and technology meet. 💫</p>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>
-      Hello! 👋<br>
-      I'm a Management Information Systems student at San Jose State University. I’m interested in roles that combine marketing, analytics, and operations to create smarter, more efficient business systems. I'm eager to learn, grow, and contribute wherever business and technology meet. Feel free to connect with me! 💫
-    </p>
+    <p>[About Me content goes here]</p>
   </section>
 
   <section id="skills">
     <h2>Skills</h2>
-    <p>[List your skills here — Python, SQL, Excel, etc.]</p>
+    <p>[Python, SQL, Excel, etc.]</p>
   </section>
 
   <section id="certifications">
     <h2>Certifications</h2>
-    <p>[Add your certifications here — Salesforce, Coursera, etc.]</p>
+    <p>[List them here]</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>[Add project summaries or links here]</p>
+    <p>[Projects or placeholder cards]</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      <strong>Email:</strong> your.email@example.com<br>
-      <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-link/" target="_blank">your-link</a>
+      Email: your.email@example.com <br>
+      LinkedIn: <a href="https://www.linkedin.com/in/your-link/" target="_blank">your-link</a>
     </p>
   </section>
 
