--- a/index.html
+++ b/index.html
@@ -19,27 +19,6 @@
       color: #111;
     }
 
-    header {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-    }
-
-    header h1 {
-      font-size: 2.8rem;
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1.1rem;
-      max-width: 600px;
-      line-height: 1.5;
-    }
-
     nav {
       position: fixed;
       top: 0;
@@ -65,6 +44,43 @@
       color: #6c63ff;
     }
 
+    header.hero {
+      padding: 120px 20px 80px;
+    }
+
+    .hero-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      max-width: 1100px;
+      margin: auto;
+      flex-wrap: wrap;
+      gap: 40px;
+    }
+
+    .hero-photo img {
+      width: 250px;
+      height: auto;
+      border-radius: 8px;
+      object-fit: cover;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    }
+
+    .hero-text {
+      flex: 1;
+      max-width: 550px;
+    }
+
+    .hero-text h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    .hero-text p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
     section {
       padding: 100px 20px;
       max-width: 900px;
@@ -78,24 +94,8 @@
       padding-bottom: 8px;
     }
 
-    .hero-img {
-      margin-top: 30px;
-      width: 160px;
-      height: 160px;
-      border-radius: 100%;
-      background-color: #ddd;
-      display: inline-block;
-    }
-
-    /* TEMP: placeholder image effect */
-    .hero-img::after {
-      content: 'Your Photo';
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      font-size: 0.9rem;
-      color: #555;
+    a {
+      color: #6c63ff;
     }
   </style>
 </head>
@@ -109,37 +109,53 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <header>
-    <div class="hero-img"></div>
-    <h1>Hello, I’m Hena</h1>
-    <p>I’m a Business Administration student specializing in MIS at San Jose State University, passionate about technology, data, and process optimization. I'm eager to learn, grow, and contribute wherever business and technology meet. 💫</p>
+  <header class="hero">
+    <div class="hero-container">
+      <div class="hero-photo">
+        <img src="hena-photo.png" alt="Hena's photo" />
+      </div>
+      <div class="hero-text">
+        <h1>Hello, I’m Hena</h1>
+        <p>
+          I’m a Business Administration student specializing in MIS at San Jose State University, passionate about technology, data, and process optimization. I'm eager to learn, grow, and contribute wherever business and technology meet. 💫
+        </p>
+      </div>
+    </div>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>[About Me content goes here]</p>
+    <p>[Add more about your background, interests, or journey here]</p>
   </section>
 
   <section id="skills">
     <h2>Skills</h2>
-    <p>[Python, SQL, Excel, etc.]</p>
+    <p>[Python, SQL, Excel, Salesforce, PowerPoint, HTML/CSS, Pandas, etc.]</p>
   </section>
 
   <section id="certifications">
     <h2>Certifications</h2>
-    <p>[List them here]</p>
+    <ul>
+      <li>Salesforce Agentforce Specialist (Trailhead)</li>
+      <li>Google Project Management (Coursera)</li>
+      <li>Google Data Analytics (Coursera)</li>
+      <li>Google UX Design (Coursera)</li>
+      <li>Google IT Support (Coursera)</li>
+      <li>UVA Digital Product Management (Coursera)</li>
+    </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>[Projects or placeholder cards]</p>
+    <p>[Add your project names, brief descriptions, and links if available]</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      Email: your.email@example.com <br>
-      LinkedIn: <a href="https://www.linkedin.com/in/your-link/" target="_blank">your-link</a>
+      📧 Email: your.email@example.com<br>
+      🔗 LinkedIn: <a href="https://www.linkedin.com/in/your-link" target="_blank">linkedin.com/in/your-link</a><br>
+      📄 Resume: [Upload your resume and link it here]
     </p>
   </section>
 
