--- a/index.html
+++ b/index.html
@@ -393,6 +393,39 @@
   width: 100vw;
   height: 100vh;
 }
+/* Mobile responsiveness */
+@media only screen and (max-width: 768px) {
+  .hero {
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-top: 10vh;
+  }
+
+  .hero-text h1 {
+    font-size: 42px;
+    text-align: center;
+  }
+
+  .about-me {
+    font-size: 14px;
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .headshot-static {
+    position: relative;
+    top: auto;
+    left: auto;
+    width: 80vw;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .navigation-bar-img,
+  .navigation-bar-links {
+    display: none;
+  }
+}
   </style>
 </head>
 
